[package]
name = "poseidon-resonance"
version = "0.9.0"
license = "MIT-0"
authors = ["Resonance Network Developers <hello@resonancenetwork.io>"]
homepage = "https://resonancenetwork.io"
repository = "https://github.com/resonance-network/poseidon-resonance#"
edition = "2021"

[dependencies]
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
sp-runtime = { version = "42.0.0", default-features = false }
sp-core = { version = "37.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-trie = { version = "40.0.0", default-features = false }
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
serde = { version = "1.0.217", default-features = false, optional = true }
qp-plonky2 = { version = "1.1.0", default-features = false, features = [
	"no_random",
] }

[dev-dependencies]
hex = "0.4.3"
env_logger = "0.11.8"
ctor = "0.4.2"

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-storage/std",
]

serde = [
	"codec/serde",
	"dep:serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
	"sp-storage/serde",
]
